Agregado de seguridad en backend y principio de página Into en frontend.